// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with selectable rows 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -117,11 +117,11 @@
          </td>
          <td>
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td>
@@ -173,11 +173,11 @@
          </td>
          <td>
            <div>
-             Row 1 Not Selected
+             Row 1 Selected
            </div>
          </td>
          <td>
@@ -229,11 +229,11 @@
          </td>
          <td>
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td>
@@ -285,11 +285,11 @@
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
@@ -397,11 +397,11 @@
          </td>
          <td>
            <div>
-             Row 3 Not Selected
+             Row 3 Selected
            </div>
          </td>
          <td>
@@ -453,11 +453,11 @@
          </td>
          <td>
            <div>
-             Row 4 Not Selected
+             Row 4 Selected
            </div>
          </td>
          <td>
@@ -509,11 +509,11 @@
          </td>
          <td>
            <div>
-             Row 5 Not Selected
+             Row 5 Selected
            </div>
          </td>
          <td>
@@ -565,11 +565,11 @@
          </td>
          <td>
            <div>
-             Row 6 Not Selected
+             Row 6 Selected
            </div>
          </td>
          <td>
@@ -621,11 +621,11 @@
          </td>
          <td>
            <div>
-             Row 6.0 Not Selected
+             Row 6.0 Selected
            </div>
          </td>
          <td>
@@ -677,11 +677,11 @@
          </td>
          <td>
            <div>
-             Row 6.1 Not Selected
+             Row 6.1 Selected
            </div>
          </td>
          <td>
@@ -733,11 +733,11 @@
          </td>
          <td>
            <div>
-             Row 7 Not Selected
+             Row 7 Selected
            </div>
          </td>
          <td>
@@ -789,11 +789,11 @@
          </td>
          <td>
            <div>
-             Row 8 Not Selected
+             Row 8 Selected
            </div>
          </td>
          <td>
@@ -845,11 +845,11 @@
          </td>
          <td>
            <div>
-             Row 9 Not Selected
+             Row 9 Selected
            </div>
          </td>
          <td>
@@ -901,11 +901,11 @@
          </td>
          <td>
            <div>
-             Row 10 Not Selected
+             Row 10 Selected
            </div>
          </td>
          <td>
@@ -957,11 +957,11 @@
          </td>
          <td>
            <div>
-             Row 10.0 Not Selected
+             Row 10.0 Selected
            </div>
          </td>
          <td>
@@ -1013,11 +1013,11 @@
          </td>
          <td>
            <div>
-             Row 10.1 Not Selected
+             Row 10.1 Selected
            </div>
          </td>
          <td>
@@ -1069,11 +1069,11 @@
          </td>
          <td>
            <div>
-             Row 11 Not Selected
+             Row 11 Selected
            </div>
          </td>
          <td>
@@ -1125,11 +1125,11 @@
          </td>
          <td>
            <div>
-             Row 12 Not Selected
+             Row 12 Selected
            </div>
          </td>
          <td>
@@ -1181,11 +1181,11 @@
          </td>
          <td>
            <div>
-             Row 13 Not Selected
+             Row 13 Selected
            </div>
          </td>
          <td>
@@ -1237,11 +1237,11 @@
          </td>
          <td>
            <div>
-             Row 14 Not Selected
+             Row 14 Selected
            </div>
          </td>
          <td>
@@ -1293,11 +1293,11 @@
          </td>
          <td>
            <div>
-             Row 14.0 Not Selected
+             Row 14.0 Selected
            </div>
          </td>
          <td>
@@ -1349,11 +1349,11 @@
          </td>
          <td>
            <div>
-             Row 14.1 Not Selected
+             Row 14.1 Selected
            </div>
          </td>
          <td>
@@ -1405,11 +1405,11 @@
          </td>
          <td>
            <div>
-             Row 15 Not Selected
+             Row 15 Selected
            </div>
          </td>
          <td>
@@ -1461,11 +1461,11 @@
          </td>
          <td>
            <div>
-             Row 16 Not Selected
+             Row 16 Selected
            </div>
          </td>
          <td>
@@ -1517,11 +1517,11 @@
          </td>
          <td>
            <div>
-             Row 17 Not Selected
+             Row 17 Selected
            </div>
          </td>
          <td>
@@ -1573,11 +1573,11 @@
          </td>
          <td>
            <div>
-             Row 18 Not Selected
+             Row 18 Selected
            </div>
          </td>
          <td>
@@ -1629,11 +1629,11 @@
          </td>
          <td>
            <div>
-             Row 18.0 Not Selected
+             Row 18.0 Selected
            </div>
          </td>
          <td>
@@ -1685,11 +1685,11 @@
          </td>
          <td>
            <div>
-             Row 18.1 Not Selected
+             Row 18.1 Selected
            </div>
          </td>
          <td>
@@ -1741,11 +1741,11 @@
          </td>
          <td>
            <div>
-             Row 19 Not Selected
+             Row 19 Selected
            </div>
          </td>
          <td>
@@ -1797,11 +1797,11 @@
          </td>
          <td>
            <div>
-             Row 20 Not Selected
+             Row 20 Selected
            </div>
          </td>
          <td>
@@ -1853,11 +1853,11 @@
          </td>
          <td>
            <div>
-             Row 21 Not Selected
+             Row 21 Selected
            </div>
          </td>
          <td>
@@ -1909,11 +1909,11 @@
          </td>
          <td>
            <div>
-             Row 22 Not Selected
+             Row 22 Selected
            </div>
          </td>
          <td>
@@ -1965,11 +1965,11 @@
          </td>
          <td>
            <div>
-             Row 22.0 Not Selected
+             Row 22.0 Selected
            </div>
          </td>
          <td>
@@ -2021,11 +2021,11 @@
          </td>
          <td>
            <div>
-             Row 22.1 Not Selected
+             Row 22.1 Selected
            </div>
          </td>
          <td>
@@ -2077,11 +2077,11 @@
          </td>
          <td>
            <div>
-             Row 23 Not Selected
+             Row 23 Selected
            </div>
          </td>
          <td>
@@ -2114,15 +2114,52 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 36
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": []
+   "selectedRowPaths": [
+     "0",
+     "1",
+     "2",
+     "2.0",
+     "2.1",
+     "3",
+     "4",
+     "5",
+     "6",
+     "6.0",
+     "6.1",
+     "7",
+     "8",
+     "9",
+     "10",
+     "10.0",
+     "10.1",
+     "11",
+     "12",
+     "13",
+     "14",
+     "14.0",
+     "14.1",
+     "15",
+     "16",
+     "17",
+     "18",
+     "18.0",
+     "18.1",
+     "19",
+     "20",
+     "21",
+     "22",
+     "22.0",
+     "22.1",
+     "23"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -117,11 +117,11 @@
          </td>
          <td>
            <div>
-             Row 0 Selected
+             Row 0 Not Selected
            </div>
          </td>
          <td>
@@ -173,11 +173,11 @@
          </td>
          <td>
            <div>
-             Row 1 Selected
+             Row 1 Not Selected
            </div>
          </td>
          <td>
@@ -229,11 +229,11 @@
          </td>
          <td>
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td>
@@ -285,11 +285,11 @@
          </td>
          <td>
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td>
@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
@@ -397,11 +397,11 @@
          </td>
          <td>
            <div>
-             Row 3 Selected
+             Row 3 Not Selected
            </div>
          </td>
          <td>
@@ -453,11 +453,11 @@
          </td>
          <td>
            <div>
-             Row 4 Selected
+             Row 4 Not Selected
            </div>
          </td>
          <td>
@@ -509,11 +509,11 @@
          </td>
          <td>
            <div>
-             Row 5 Selected
+             Row 5 Not Selected
            </div>
          </td>
          <td>
@@ -565,11 +565,11 @@
          </td>
          <td>
            <div>
-             Row 6 Selected
+             Row 6 Not Selected
            </div>
          </td>
          <td>
@@ -621,11 +621,11 @@
          </td>
          <td>
            <div>
-             Row 6.0 Selected
+             Row 6.0 Not Selected
            </div>
          </td>
          <td>
@@ -677,11 +677,11 @@
          </td>
          <td>
            <div>
-             Row 6.1 Selected
+             Row 6.1 Not Selected
            </div>
          </td>
          <td>
@@ -733,11 +733,11 @@
          </td>
          <td>
            <div>
-             Row 7 Selected
+             Row 7 Not Selected
            </div>
          </td>
          <td>
@@ -789,11 +789,11 @@
          </td>
          <td>
            <div>
-             Row 8 Selected
+             Row 8 Not Selected
            </div>
          </td>
          <td>
@@ -845,11 +845,11 @@
          </td>
          <td>
            <div>
-             Row 9 Selected
+             Row 9 Not Selected
            </div>
          </td>
          <td>
@@ -901,11 +901,11 @@
          </td>
          <td>
            <div>
-             Row 10 Selected
+             Row 10 Not Selected
            </div>
          </td>
          <td>
@@ -957,11 +957,11 @@
          </td>
          <td>
            <div>
-             Row 10.0 Selected
+             Row 10.0 Not Selected
            </div>
          </td>
          <td>
@@ -1013,11 +1013,11 @@
          </td>
          <td>
            <div>
-             Row 10.1 Selected
+             Row 10.1 Not Selected
            </div>
          </td>
          <td>
@@ -1069,11 +1069,11 @@
          </td>
          <td>
            <div>
-             Row 11 Selected
+             Row 11 Not Selected
            </div>
          </td>
          <td>
@@ -1125,11 +1125,11 @@
          </td>
          <td>
            <div>
-             Row 12 Selected
+             Row 12 Not Selected
            </div>
          </td>
          <td>
@@ -1181,11 +1181,11 @@
          </td>
          <td>
            <div>
-             Row 13 Selected
+             Row 13 Not Selected
            </div>
          </td>
          <td>
@@ -1237,11 +1237,11 @@
          </td>
          <td>
            <div>
-             Row 14 Selected
+             Row 14 Not Selected
            </div>
          </td>
          <td>
@@ -1293,11 +1293,11 @@
          </td>
          <td>
            <div>
-             Row 14.0 Selected
+             Row 14.0 Not Selected
            </div>
          </td>
          <td>
@@ -1349,11 +1349,11 @@
          </td>
          <td>
            <div>
-             Row 14.1 Selected
+             Row 14.1 Not Selected
            </div>
          </td>
          <td>
@@ -1405,11 +1405,11 @@
          </td>
          <td>
            <div>
-             Row 15 Selected
+             Row 15 Not Selected
            </div>
          </td>
          <td>
@@ -1461,11 +1461,11 @@
          </td>
          <td>
            <div>
-             Row 16 Selected
+             Row 16 Not Selected
            </div>
          </td>
          <td>
@@ -1517,11 +1517,11 @@
          </td>
          <td>
            <div>
-             Row 17 Selected
+             Row 17 Not Selected
            </div>
          </td>
          <td>
@@ -1573,11 +1573,11 @@
          </td>
          <td>
            <div>
-             Row 18 Selected
+             Row 18 Not Selected
            </div>
          </td>
          <td>
@@ -1629,11 +1629,11 @@
          </td>
          <td>
            <div>
-             Row 18.0 Selected
+             Row 18.0 Not Selected
            </div>
          </td>
          <td>
@@ -1685,11 +1685,11 @@
          </td>
          <td>
            <div>
-             Row 18.1 Selected
+             Row 18.1 Not Selected
            </div>
          </td>
          <td>
@@ -1741,11 +1741,11 @@
          </td>
          <td>
            <div>
-             Row 19 Selected
+             Row 19 Not Selected
            </div>
          </td>
          <td>
@@ -1797,11 +1797,11 @@
          </td>
          <td>
            <div>
-             Row 20 Selected
+             Row 20 Not Selected
            </div>
          </td>
          <td>
@@ -1853,11 +1853,11 @@
          </td>
          <td>
            <div>
-             Row 21 Selected
+             Row 21 Not Selected
            </div>
          </td>
          <td>
@@ -1909,11 +1909,11 @@
          </td>
          <td>
            <div>
-             Row 22 Selected
+             Row 22 Not Selected
            </div>
          </td>
          <td>
@@ -1965,11 +1965,11 @@
          </td>
          <td>
            <div>
-             Row 22.0 Selected
+             Row 22.0 Not Selected
            </div>
          </td>
          <td>
@@ -2021,11 +2021,11 @@
          </td>
          <td>
            <div>
-             Row 22.1 Selected
+             Row 22.1 Not Selected
            </div>
          </td>
          <td>
@@ -2077,11 +2077,11 @@
          </td>
          <td>
            <div>
-             Row 23 Selected
+             Row 23 Not Selected
            </div>
          </td>
          <td>
@@ -2114,52 +2114,15 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 36
+     Selected Rows: 0
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": [
-     "0",
-     "1",
-     "2",
-     "2.0",
-     "2.1",
-     "3",
-     "4",
-     "5",
-     "6",
-     "6.0",
-     "6.1",
-     "7",
-     "8",
-     "9",
-     "10",
-     "10.0",
-     "10.1",
-     "11",
-     "12",
-     "13",
-     "14",
-     "14.0",
-     "14.1",
-     "15",
-     "16",
-     "17",
-     "18",
-     "18.0",
-     "18.1",
-     "19",
-     "20",
-     "21",
-     "22",
-     "22.0",
-     "22.1",
-     "23"
-   ]
+   "selectedRowPaths": []
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -117,11 +117,11 @@
          </td>
          <td>
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td>
@@ -229,11 +229,11 @@
          </td>
          <td>
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td>
@@ -285,11 +285,11 @@
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
@@ -2114,15 +2114,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": []
+   "selectedRowPaths": [
+     "0",
+     "2",
+     "2.0",
+     "2.1"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -229,11 +229,11 @@
          </td>
          <td>
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td>
@@ -285,11 +285,11 @@
          </td>
          <td>
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td>
@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
@@ -2114,20 +2114,17 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 1
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
-     "0",
-     "2",
-     "2.0",
-     "2.1"
+     "0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -285,11 +285,11 @@
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
@@ -2114,17 +2114,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 1
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
-     "0"
+     "0",
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 6`] = `
Snapshot Diff:
- First value
+ Second value

@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
@@ -2114,18 +2114,19 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 2
+     Selected Rows: 3
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
      "0",
-     "2.0"
+     "2.0",
+     "2.1"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 7`] = `
Snapshot Diff:
- First value
+ Second value

@@ -341,11 +341,11 @@
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
@@ -2114,19 +2114,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 3
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
      "0",
-     "2.0",
-     "2.1"
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;
